<resources>
    <string name="app_name">AppBaja</string>
    <string name="hint_email">Email</string>
    <string name="text_ou">Ou</string>
    <string name="text_inscricao">Inscreva-se agora e participe</string>
    <string name="text_login">Log in</string>
    <string name="hint_senha">Senha</string>
    <string name="text_singup">Sing up</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_sobrenome">Sobrenome</string>
    <string name="hint_periodo">Periodo</string>
    <string name="hint_confirma_senha">Confirmar Senha</string>
    <string name="msg_error_email_input">Digite um email válido</string>
    <string name="msg_error_senha_fraca">Digite uma senha maior que 4 caracteres</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="msg_sucesso_autentica_usuario">Usuário autenticado com sucesso</string>
    <string name="msg_exececao_cadastro_usuario">Usuário não está cadastrado</string>
    <string name="msg_exececao_cadastro_usuario_corresponde">E-mail e senha não correspondem a um usuário cadastrado
    </string>
    <string name="msg_error_cadastro_usuario">Erro ao cadastrar usuário</string>
    <string name="text_autenticando">Autenticando...</string>
    <string name="title_permissao">Permissão Negadas</string>
    <string name="msg_alerta_conceder_permisao_app">Para utilizar o app é necessária aceitar as permissões</string>
    <string name="msg_erro_abre_galeria">Erro ao abrir Galeria</string>
    <string name="msg_erro_abre_camera">Erro ao abri a câmera</string>
    <string name="todo">TODO</string>
    <string name="msg_error_campo_preenchido">O valor do campo deve ser maior que 4 caracteres</string>
    <string name="msg_error_carrega_arquivo">Erro ao carregar o arquivo</string>
    <string name="msg_error_senha_diferentes">Senhas diferentes</string>
    <string name="msg_error_conta_existente">Esta conta já foi cadastrada</string>
    <string name="msg_sucesso_usuario_salvo">Usuário salvo sucesso</string>
    <string name="title_contatos">Contatos</string>
    <string name="title_navegacao">Navegação</string>
    <string name="title_equipe">Equipe</string>
    <string name="title_eventos">Eventos</string>
    <string name="title_sair">Sair</string>
    <string name="title_comunicacao">Comunicação</string>
    <string name="title_configuracao">Configuração</string>
    <string name="title_conta">Conta</string>
    <string name="title_definicoes">Definições</string>
    <string name="title_compartilhar">Compartilhar</string>
    <string name="title_enviar">Enviar</string>
    <string name="text_esqueceu_senha">Esqueceu a Senha?</string>
    <string name="text_instrucao_recupera_email">Por favor, digite o email cadastrado para recuperação da senha</string>
    <string name="text_recupera_senha">Recuperar Senha</string>
    <string name="msg_sucesso_recupera_senha">Foi enviado um email de recuperação, verifique sua caixa de mensagem.
    </string>
    <string name="msg_error_recupera_senha">Não foi possivel recuperar a sua senha</string>
    <string name="title_config_conta">Alterar dados</string>
    <string name="title_config_senha">Alterar senha</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_confirmar">Comfirmar</string>
    <string name="title_activity_configura_conta">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
