<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
                android:id="@+id/nav_eventos"
                android:icon="@drawable/ic_star_24dp"
                android:title="@string/title_eventos"/>

        <item
                android:id="@+id/nav_navegacao"
                android:icon="@drawable/ic_navigation_24dp"
                android:title="@string/title_navegacao"/>

        <item
                android:id="@+id/nav_contatos"
                android:icon="@drawable/ic_people_24dp"
                android:title="@string/title_contatos"/>

        <item
                android:id="@+id/nav_equipe"
                android:icon="@drawable/ic_flag_24dp"
                android:title="@string/title_equipe"/>

    </group>

    <item android:title="@string/title_configuracao">
        <menu>
            <item
                    android:id="@+id/nav_conta"
                    android:icon="@drawable/ic_person_24dp"
                    android:title="@string/title_conta"/>
            <item
                    android:id="@+id/nav_definicoes"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/title_definicoes"/>
        </menu>
    </item>

    <item android:title="@string/title_comunicacao">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/title_compartilhar"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/title_enviar"/>
        </menu>
    </item>

    <group android:checkableBehavior="single">

        <item
                android:id="@+id/nav_sair"
                android:icon="@drawable/ic_exit_to_app_24dp"
                android:title="@string/title_sair"/>

    </group>

</menu>
