<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activitys.ResetActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/form_recupera_senha"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnRecuperaSenha" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:paddingRight="8dp" android:paddingTop="8dp"
                android:paddingBottom="8dp" android:paddingStart="8dp">
            <TextView
                    android:text="@string/text_instrucao_recupera_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/txvEsqueceuSenha" android:layout_weight="1"
                    android:textSize="18sp" android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_email_24dp"
                    android:id="@+id/imvEmail" android:layout_marginTop="24dp"/>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/edtEmail" android:layout_weight="1" android:hint="@string/hint_email"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
    <Button
            android:text="@string/text_recupera_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRecuperaSenha"
            android:textColor="@android:color/white" android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_recupera_senha" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
</android.support.constraint.ConstraintLayout>