<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activitys.LoginActivity">

    <ImageView
            android:src="@drawable/ic_logo"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:id="@+id/imvLogo" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/form_login" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/form_login" app:layout_constraintTop_toBottomOf="@+id/imvLogo"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp">

        <!--<LinearLayout-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->
            <!--<ImageView-->
                    <!--android:src="@drawable/ic_email_24dp"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:id="@+id/imageView2"-->
                    <!--android:layout_gravity="center" android:layout_marginEnd="8dp"-->
                    <!--android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"/>-->
            <!--<android.support.design.widget.TextInputLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content">-->
                <!--<EditText-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:inputType="textEmailAddress"-->
                        <!--android:ems="10"-->
                        <!--android:layout_gravity="center"-->
                        <!--android:hint="@string/hint_email"-->
                        <!--android:id="@+id/edtEmail"/>-->
            <!--</android.support.design.widget.TextInputLayout>-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->
            <!--<ImageView-->
                    <!--android:src="@drawable/ic_vpn_key_24dp"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:id="@+id/imageView3"-->
                    <!--android:layout_gravity="center" android:layout_marginTop="8dp"-->
                    <!--android:layout_marginEnd="8dp" android:layout_marginLeft="8dp" android:layout_marginRight="8dp"/>-->
            <!--<android.support.design.widget.TextInputLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content">-->
                <!--<EditText-->
                        <!--android:layout_gravity="center"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:inputType="textPassword"-->
                        <!--android:ems="10"-->
                        <!--android:hint="@string/hint_senha"-->
                        <!--android:id="@+id/edtSenha"/>-->
            <!--</android.support.design.widget.TextInputLayout>-->
        <!--</LinearLayout>-->

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_email_24dp"
                    android:id="@+id/imvEmail" android:layout_marginTop="24dp"/>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/edtEmail" android:layout_weight="1" android:hint="@string/hint_email"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_vpn_key_24dp"
                    android:id="@+id/imvSenha" android:layout_marginTop="24dp"/>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/edtSenha" android:layout_weight="1" android:hint="@string/hint_senha"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:paddingRight="8dp" android:paddingTop="8dp">
            <TextView
                    android:text="@string/text_esqueceu_senha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/txvEsqueceuSenha" android:layout_weight="1"
                    android:textAlignment="textEnd" android:textColor="@color/colorAccent" android:textSize="14sp"
                    android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
    <Button
            android:text="@string/text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin" android:background="@color/colorPrimary"
            android:textColor="@android:color/white" app:layout_constraintTop_toBottomOf="@+id/form_login"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/text_ou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintBottom_toTopOf="@+id/txvSingup" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textColorLink="@color/colorAccent"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/text_inscricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txvSingup"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:textColor="@color/colorAccent" android:textStyle="bold" android:textSize="18sp"/>
</android.support.constraint.ConstraintLayout>