<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activitys.SingupActivity">


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/constraintLayout" app:layout_constraintBottom_toTopOf="@+id/form_singup"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp">


        <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/civImageAvatar"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/ic_perfil"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
                android:src="@drawable/ic_camera_alt_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imvCamera" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/imvGaleria"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintTop_toTopOf="@+id/civImageAvatar"
                app:layout_constraintBottom_toBottomOf="@+id/civImageAvatar" app:layout_constraintVertical_bias="0.95"
                android:layout_marginEnd="8dp" android:contentDescription="TODO"/>
        <ImageView
                android:src="@drawable/ic_image_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imvGaleria"
                app:layout_constraintStart_toEndOf="@+id/imvCamera" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/civImageAvatar"
                app:layout_constraintBottom_toBottomOf="@+id/civImageAvatar"
                app:layout_constraintVertical_bias="0.95" android:layout_marginStart="8dp"
                android:contentDescription="TODO"/>

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/form_singup"
            app:layout_constraintBottom_toTopOf="@+id/btnSingup" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintHorizontal_bias="0.5">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/form_nome">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/ic_person_24dp"
                        android:id="@+id/imvPerson" android:layout_marginTop="24dp"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/edtNome" android:layout_weight="1" android:hint="@string/hint_nome"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/edtSobrenome" android:layout_weight="1"
                            android:hint="@string/hint_sobrenome"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/form_email">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_email_24dp"
                    android:id="@+id/imvEmail" android:layout_marginTop="24dp"/>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/edtEmail" android:layout_weight="1" android:hint="@string/hint_email"
                        android:baselineAligned="false"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/form_curso">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/ic_business_24dp"
                        android:id="@+id/imvBusiness" android:layout_marginTop="24dp" android:contentDescription="TODO"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:layout_marginTop="15dp">
                    <Spinner
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" android:id="@+id/spnCurso" android:layout_weight="1"
                    />
                </LinearLayout>
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="10"
                            android:id="@+id/edtPeriodo" android:layout_weight="1" android:hint="@string/hint_periodo"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/form_senha">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/ic_vpn_key_24dp"
                        android:id="@+id/imvSenha" android:layout_marginTop="24dp" android:contentDescription="TODO"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:ems="10"
                            android:id="@+id/edtSenha" android:layout_weight="1" android:hint="@string/hint_senha"
                            android:autofillHints=""/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:ems="10"
                            android:id="@+id/edtConfirmaSenha" android:layout_weight="1"
                            android:hint="@string/hint_confirma_senha"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <Button
            android:text="@string/text_singup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSingup" android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/form_singup"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
</android.support.constraint.ConstraintLayout>